Add GlobalExceptionHandler, WebConfig, ProdutoBuilder e endpoint PATCH adicionar-quantidade
- GlobalExceptionHandler com respostas JSON estruturadas para 404, 400 e erros de validação
- ProdutoNaoEncontradoException substituindo RuntimeException genérico em ProdutoService e EstoqueService
- WebConfig com configuração CORS para /api/**
- ProdutoBuilder fluente adaptado ao modelo do projeto
- Endpoint PATCH /api/produtos/{id}/adicionar-quantidade no controller e service

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>